@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.35
+ * @version 0.13.37
  */
 
 /* Breaks */
@@ -59,6 +59,7 @@
 @dialog-title-min-width: 6rem;
 @display-text-min-width: 12rem;
 @display-text-max-width: 24rem;
+@doc-item-height: 80vh;
 @ds-form-max-height-vertical: 60vh;
 @ds-form-max-width-horizontal: 21rem;
 @error-max-width: 50rem;
