@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.36
+ * @version 0.13.37
  */
 @import "wcom-05-constants";
 *, *::before, *::after {
@@ -43,7 +43,7 @@ body {
       --bg-lighter: hsl(from var(--bg-base) h s calc(l * 1.07));
       --bg-light:   hsl(from var(--bg-base) h s calc(l * 1.04));
       --bg-dark:    hsl(from var(--bg-base) h s calc(l * 0.9));
-      --bg-darker:  hsl(from var(--bg-base) h s calc(l * 0.7));
+      --bg-darker:  hsl(from var(--bg-base) h s calc(l * 0.6));
     }
     &.dark-theme {
         form.classic {
@@ -116,10 +116,11 @@ main {
                 justify-content: left;
             }
             .panel {
-                display: flex; gap: 1rem; opacity: 1; transition: opacity 1s;
+                display: flex; flex-direction: column; gap: 1rem; opacity: 1;
+                transition: opacity 1s;
                 .block-container {
-                    display: flex; flex-direction: column; gap: 1rem;
-                    justify-content: space-between;
+                    align-items: center; display: flex; flex-wrap: wrap;
+                    gap: 1rem; justify-content: space-evenly;
                 }
                 &.fade {
                     opacity: 0;
