@@ -1,5 +1,6 @@
 Revision history for Web::Components
 
+          - Default API endpoint changed
           - Implements method args
           - Models context class defaults to config object attribute
           - Moved filter constants to wcom-05-constants.less
